disable intel-gpu-plugin chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:gvo1PJXIgbPmZvc9rLkUpu+GBLj90fn0FD4NMBib9Q5Jx+tBn9/nGTDka4DEYuRhw+8UXqgVYsbZh7QxytkQ3iw=,iv:hJmCa0nBdDhRmSk1/EPFW80UAHt/51mS7ibM7Jiooio=,tag:e+64au9jKDbNoY28xglDiw==,type:comment]
-#ENC[AES256_GCM,data:Hh8LidtwP4RNmJUU+zA8tttZz9wpZBuf1qFAiw4KdM41wBz/TIbsnthpDck=,iv:wdBnCcmw+qK5BxGKzbBGfrc3npM+LzOJWtrkRt8V06s=,tag:dyh8XB/K+p+BH4E+XkSGyw==,type:comment]
-VIP: ENC[AES256_GCM,data:4oQXQLFnZC9b+oLOFw==,iv:TXZ4PQG9c3JXlRJHr/j8DlUv1+Gq+5V+klAaRZ2MI6M=,tag:KMG5x+wlmoa/EMy636cAmA==,type:str]
-#ENC[AES256_GCM,data:LNzEPzP0YHQx0IDPCbUOaIIHiDY1Kj9QDKxj,iv:ZwdRSOl7CTU8kHvKGT7wBn5iCyr8ENbqbbYRjWQrfbI=,tag:k/+kBe0stZWfmqZWa3UaLg==,type:comment]
-#ENC[AES256_GCM,data:xL7VrAy4hLgbPHTq8oJKUgGu5WyXl2Xsy1yKejxDsOYlvDfXIUX/eISoMwPXXjzf8kh6VhrFhDdAFtMhaquwe5PVCruOlsxNkTDB5JVbfhjZ9j4NLpkJlR0=,iv:Yg1tekuXhxTF1aMTUbnf8FTk/XuIUTEdwSuBoYn5UrA=,tag:M/avia6zol6dk5FiNKm6Mw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:HXirdRjXMDD1MiyrXBM=,iv:hUggQUb5+24O4pFAYaJkJGEm+hF0Zo/5fzPZI77c7/Q=,tag:qTNXDsaorPvhdHWjpvqGFA==,type:str]
-#ENC[AES256_GCM,data:rDj1fgW9GcV4tVr9TcFtUDgcLoBXmG6fS6YhlVLY3z4kkw==,iv:HFepqjE8ChMerZuhyYW3Cw8qlpEbIvJ7s2ZrCldwe4Q=,tag:nMhAanlqtYj15N5ph4/7Ew==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:lAfbJPqN3hF2g16N/Q==,iv:nq3LtRiSyowiHTbpkx3bIx/bPBsLol3QHMnA5LtfoXA=,tag:ouEVToBqpHeZ+JZS2vmfYg==,type:str]
-#ENC[AES256_GCM,data:NjduWBZld71qwco5XyadVMhmtSiRoRetylg7cu5kiawN2r98dAQeO6xmdoKxBIE=,iv:28x82+QmWSC3vF9EMCPq5HErxT44rRHJUj9HO6qIBLE=,tag:1h3wv8fDadxa24MceRGbpg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:0KTgedNkmjTwM9rpOMRRzG4aEQuiwPjkU8+rCc+zpQ==,iv:g3ydsyA2JHGkOMwHDzTsT4AB7neQedyzE1hPPWSVQYw=,tag:9W8xsO4lWSVCpvjhZKPCNw==,type:str]
-#ENC[AES256_GCM,data:6UiVNVkh5vPIUPdxzBHG3t2nCSfNNDeBXOcR6uTF2lG48WrsMWv/yVkd3z9k6cskelHuH0+DiqsT3+cpC6JFgLOqCtBCUKhmlhfJEG8d6/fUJA==,iv:0r3wZgTtVBJ+vvMKOBZb7gc7SdBPzgpdM9SZGw99F5o=,tag:MSIpWoqGRBS1lLtrfZXmkA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:A6BcZaHK1gFy3BIDPcP0,iv:adk6XQxh2b2z+miRi2EN8guemK7q8M05OfldkcOQD9Q=,tag:/w0cCCHb4a6W9LVqkyPupA==,type:str]
-#ENC[AES256_GCM,data:rsNApjTZG+YLG13Io5GH6a0jyz47FpS3c6t/kIH+h04F,iv:xD1ESCuU0CEciKTj6TVBHpUoyDAjV4cljvg1NtWu4U0=,tag:RdV7HmpNCbFiG7q19S5wMg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:MsVF+AbbUC1cxjtpfnDi,iv:3w04R0lLcD5+yf6uosK/fL5uPeYbZAMe3q6Pcr6oF44=,tag:eHwhLbcjNgI9iyXC7WQ0EA==,type:str]
-#ENC[AES256_GCM,data:M0T/qZyrNnRXeXhw+cwhH8YdDQVBsSuPGgXfkVFBbxnlfDYGvkD7VMQIW2yaar1cjfTSZlt5ONLExwzSIDL1TDcYGLHHiVX6IKWMrPRBjEc=,iv:UMDuqJKqIgqPHXCI7oEkMRFKLeTKOTMFdymDv9qc8nI=,tag:PlidvINGDf5Z1qxD1VSTTw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:+5VbTzBg2tOlTUcTENKc,iv:RlIrl/Jz9pWG3nrT7xFXvtnu/u5EEY0bKbMTWQjgEns=,tag:r/EBBC7U6c2/cZWnXD/9wA==,type:str]
-#ENC[AES256_GCM,data:C/FDzlasfrm0hnWxoyYaC2ITAWEMf4mwc5RfmNrF8ush+1bNBAI6bKytorp71caXtmbmFN7R4X1kIPMquGgpzAhclJGaKzDzqOPONPlN6tED6nGAEbtU,iv:whDlSIfw7dNdX2Z0XkVm/QydszKkJ1fDLP7gDiW53j4=,tag:d6+sRZMhWCz5gBPciX6Xvg==,type:comment]
-#ENC[AES256_GCM,data:XPhLBxh1Lj2PXr95CGmnDRNiaqt+uHRrrvtruX7RssjdSikIwN+DiLkjF466a/10Qw5Tic5Hf/nOg4kGIuzimLOQ0ZgJFDJCY7v/4qStvikzf0YLTSkRi9U3CvjzVPXa90+JX1hfVezKnaMquOFWhRNV43LTCTgfPthr2A==,iv:CW9V0+rLJIpIvfBgOl/DewmhUIiA/txtKw2fAPV0OjU=,tag:6/QxVG9Oo1NK7y7UWTko6g==,type:comment]
-#ENC[AES256_GCM,data:KwG4e2I2T8B6UqQpMtCdmvsd9uIHsX/TrdE4h8t2i2sJpIimeihlTDeHPB2OZBZZ651Kj2HJDsCyPtOjivqi92L1FdKmsC0J1rTczLFdHcI=,iv:H3B3K1Bnd3TyqXkWFvDjozyvAvKOiUx89Cte4d4f5tk=,tag:EEebRjP0mldW5yY8Z67ljQ==,type:comment]
-#ENC[AES256_GCM,data:eBPLsBgOiFrhHwyR1g6nLzIaerwLGnflTNkAxJvdLnGGGaesE44ffxFaV2WgDdSjwwKWCbhm,iv:nZz2m6hFnL9WtpnMrUEU1wZAzYbKi6rZhW9VJyf+DdM=,tag:N8gJAwA9p4Gj5/iK+6HviA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:tWFfvJBAqIg3kFs5,iv:sFuKMaAOfixJ/7P6gATnQn5bknKHsZlb6GkV0ERZdGI=,tag:Q1xJ2wwaXwwXxMufHEihlg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:WIUa+rKI3NI/3tKRN0+zQV8=,iv:cBaIpz054zouXLBlnQwClRXv5yR6e03hYGDrlt9Bs0k=,tag:4fX6cm7oWjN5F7UVmaRdrQ==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:5rZzgEaW9M6am+arESGO9zhm7pVyQ3rz+FHlO6u4uzs=,iv:0u1DhyqDtTsqA3PV+wsWlrsTyoCx8S4C72mbC1g2SuE=,tag:oD+fqtICpj2XmFQ3kc/HDw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:sRN9Hnl7WmJeZRsbsFzM07wxDNR1FgnyLOGDl2/56Y4gWCToD+AwtQ==,iv:rRuuXyGhNXjC2SqGzbYBJNU8QZ/h4Fniwp3BS+yGnNQ=,tag:yrw0nt/Daui2P0rqZ2AgSA==,type:str]
-#ENC[AES256_GCM,data:Tqjng/MUF53Mvlo0Fw390lkDMsrUJiM5EejLFuywPV4g9WRFGvUj0ZZltfFUe+LPh3bp9a5uaAF9vqMVJgLODw==,iv:VQEO+CeOBMXgJ2sG17CCRO9+x5/pURfs9sGpZks59Hk=,tag:IKGkOAKW6HGEG/AZ27qjVA==,type:comment]
-#ENC[AES256_GCM,data:sTxWxo82mxUJvLS4W1AEaA9EDQV1vWGu7LFE0zULqCuQrhf4aYkgNZIfCGXTEtGP+uaImLIBAzo=,iv:+1OUifrxLK9cAiMTdFSr2qoaEIr6E5lsze1lcVyQ6PM=,tag:RqqaKwodKPTHiwRpqRCqUw==,type:comment]
-#ENC[AES256_GCM,data:XAisn1dOsCuK4FDcFm/4LMfdZKqXj2km5Q==,iv:oZUHOWWEOk3Mv8dUy+wFdDJ7pz+zvfDrkPRLSA83IDk=,tag:5o0nXRoEqlI/b3mGILsp2Q==,type:comment]
-#ENC[AES256_GCM,data:A2v3PCOpPKGfOlaGfmOrhSpseayr4kEOEkSyJOnvmVIMz2QmXscT6MsOXCha9yBFIB7OePdNs4d3qdxHWsWkAyGi9k5vZyPJU4V1eMw=,iv:CEDxd0EKa24CLeNDnwLS7Ecw2d0FzmdzPAGs3lb0PyQ=,tag:UcO0gboUUhpLuBxZXWDrlg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:5ApUBo1THIovAkl1kuTaIqijcY+pJdQgn3tjWdPCfXg26lahL2jVFgS0HXV2eHXi,iv:EdLJ39lNDhovJhJm3QDIMquHjx5KMKGJOcwaZFTAk6U=,tag:q6zhszdUBEYp564/auTGkQ==,type:str]
-#ENC[AES256_GCM,data:+SLIYz+UKeCWJwqGq9xZ1i1l5oaXKU6JKvEwBdfo3cZQZLuUg/uhUmYEdvgoH9pUDYv1Q2RPC2e/fwj+7Gf1j9IJkfj/a1w=,iv:XLW7GOcGXk2L5snAd7D6R+zrKCgQtBvF2/5Xxl9CbGE=,tag:Q4KqCYYAaP3DeVZ/DHYmLA==,type:comment]
-#ENC[AES256_GCM,data:G0Ihp/X8VUQFpjbeMSD6tr6snY9YuN5bMzJuUs1qSFMITw7J43FThIxW6bK/7IWieMuLY7JX,iv:+5mKP1gLbmVd9SnJDwY9gSOIdmP/u7WRNPGiop0mMQg=,tag:YRcAF/9lgZO1TFnGaLDtbQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:YY/9Buwc0w==,iv:ui9r/0RBjKW9KuocV9JjXq/ZeadnT3yAo2OiKAJcADQ=,tag:HsLpreUy/o3LQRW0HbBRiA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:EY95JgXaoL4GkzKVD/+kzNR1Moo=,iv:BKSfCAz/6agS+p9CzS1AAeqlP+vcLcnC0K5UB/n2qK4=,tag:B8ZmArDI0YA1MwTXE08CyA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:npunmutWbafafEo=,iv:zhYHxvGhm64IAYeW98TOF+qEewoAlriaa/d2LXk8VeI=,tag:MhCXWG70xZP5hwKZFpm3Pg==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:pjnRn4ua0LzbnQeMZ3QR,iv:wrheTUEoXZOgPP19C+uz6+qfMg8VUQUml28Y2tAfzwo=,tag:mcUOwZz0zGcExii3AmtuOg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MNNv4sL8dzoKchuhS1VTrgzj5gr6TU9okw==,iv:JNSUI0qI7InoT5A0BgqecZk2zK8FHGmw+7eu8Mf3E/w=,tag:ezMHZQTPSw1uoYPIj3xOXA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:36jH/igBDyXOQjYSLAo5jZPi8JfE8L91tv+zly9ZUA==,iv:Z4F72gPDAjjcwmDmgafC1aa9lYLsX7Y6uYIthCXkI3E=,tag:giVI87IGuaK/kQLwM7NgGQ==,type:str]
-#ENC[AES256_GCM,data:XhovvCPGFRxFtX0WLs2NLth7Wm41leesk54tBcGIFfeNoQMEvkQ=,iv:oC6gFJFM+HDO0jjV2jEkoy7+XdffK+NAPUbfAZVgD0w=,tag:QTmupOS/DbBC0KtdR0DFlw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:RxwRK91KjdM8+slg6LL0hdcZ7qw=,iv:u3l9wBRZRPD8FUrRg5d2+ZyanRev9AzduR2mi2FoiDs=,tag:sWJoEL6ivaVgiGf2W0DLuA==,type:str]
-#ENC[AES256_GCM,data:kJuKLcOEKmX25b2Gf3o=,iv:h7JLFEwE3UgAEWNPXbTSHV52nNsjz/XkyXy3jc/DqtU=,tag:M9dtpPX38MskKzBh5jCJyw==,type:comment]
-PODNET: ENC[AES256_GCM,data:JJYmgLURPsFeli08Sw==,iv:cHoTT2xVCH9QACnwC+/LQpyRGvsWoWI8LvvXfzZQcSA=,tag:zEYd5ZpyGlBWJFH0r2lBqA==,type:str]
-SVCNET: ENC[AES256_GCM,data:/Jr7EMGQseBgl2jRLg==,iv:1hdvNG0uxZ8K5XRFAF4o+jGIw+tzn4t3Jf4SQY90KVc=,tag:5JNDmgarXybPrGbbbU8SfQ==,type:str]
+#ENC[AES256_GCM,data:KwR6AUERHHfUDDKnLzm0Ise3E2TG1ASWiKx2+HNVAd63nPG12Qz0jA4hARwfyHJFL/LMzJmtSgtZ7siRwDtPigE=,iv:1U8P5RsekxmA0MULBL1gcVV6juSsKRBsgk+9yXMPVes=,tag:7jlw/vrhOsyNKbDgrbqdwA==,type:comment]
+#ENC[AES256_GCM,data:B5QkSzLmKzK/TMvQUAYSWmVvDZkAP30hDYAZerukm3CR/ViVzrCIEbxp9tg=,iv:i9/NVtp2Sq7nGA+HzKRINexEwbFeCWbS+mnLWd8eEvg=,tag:QLIYZLGP1rThCBcfinWjnA==,type:comment]
+VIP: ENC[AES256_GCM,data:QFIn3Sc4EXZRgU/z9Q==,iv:zR/jx0Q7pJNgTunz8V2WfHOrwNO3oscvVYU3+gSnGeM=,tag:gXNc+nIZOrvOsPijBMgwkA==,type:str]
+#ENC[AES256_GCM,data:tqLqxP2lh1AD9IU0Q4aF4cChDqafvqCC7/jb,iv:Jg1KMjToKnHizXDQnhYXjCpFjjl4jD6bEqZKU5j2Z1g=,tag:zM5jkZNnqM5EuJP0fGW1lw==,type:comment]
+#ENC[AES256_GCM,data:guYJTp2V91j3bJA/a0QRHpZs7FnxozfoRwg7yNYI0EOzdYIvN1F3g9BrB+0+/cyZE4av58YhFZKt8pZu55G5Y6wj6TO+sQP6upuTPkAHyQhrCY872Je6BY0=,iv:6rUVOguiDnJKvu37QcDu9IJ1htWrV06zVKv91rRj/Rs=,tag:tmjcFTN91+J3+jXyOcXWGw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:XvSA4QKwtyY2l594V/c=,iv:ImvSmkCM6sF55hKhT2FjKumA2N4AlTnKFvUkm1B5xmk=,tag:bwOSpJZwrNmuq/Sq/hvkKg==,type:str]
+#ENC[AES256_GCM,data:UGdrpaJgaaPS3OffN9dDRAfKm+xEoao9KqqEKu+akdMuCQ==,iv:HpMEECnbyv+nhnRlEQgvtt/5Ypdm1aUN5IYqrdQy/VE=,tag:WbnPnoLPWNjFhToCOZJD5Q==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:9F3YnX2lHjHvKJUtNA==,iv:MqyvfMP1mwclcX75feelWwEoKIlA1J7cGqdKYwUrjng=,tag:zlGn4euZjJSxzNaAnB1+cA==,type:str]
+#ENC[AES256_GCM,data:XvwUV6qtk3q+j4V1WF/XHvf9kHlWYnKATYTnJWnf0Rms9t5nk79NmWRD4mvr4rs=,iv:e8PHevDo8Z8gRVkUpgWr6Kpj/ThCMfmzYR7Zm1qezVU=,tag:V7hiHQm9wQf9sAwbHb2Stg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:+S48HH5bwUsc1AaaiGkFNu7E4r5CIxRpjg68/eVNZA==,iv:v6fei4KruZ8suGkpMcR6TwGZUCIpq6eUhfsCxiUrbJM=,tag:aeSWJt54xi8Ez5E3qebm4Q==,type:str]
+#ENC[AES256_GCM,data:1pIuze0p/k6bixxA4svIUZ/bnmEY5ZGRRWQzVWdaZx2f68qfDpzEKVlHJKePdZbgxyxKMHZWiQb+POTrfDJMM1mCVohofTNCycYwW5K6EFcL3g==,iv:TBL59tBkZW1OIjySP9LCUp7CHRKcJ69Wb3ANvQo3bx4=,tag:2eZz8xKkMSkn8qoLxg/Q4w==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:B/cWUYnNfFpRd/2CrU7y,iv:DTkicfjApJ9p1m+g57+HEA6suLPLA3txQWTRX/Aihz0=,tag:2tNQfL3FFKKbsFckB5sSvw==,type:str]
+#ENC[AES256_GCM,data:iMBEu1fmgAIeWq9oSIi6xfq0+JjfUC9Jt7fKPjENZexa,iv:klC3d3KO+oBreNWuoq3OU9g7F3GSn85MOX+nOpWeSeI=,tag:fM2oBiBk7Z1dUKg/zrX/qg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:mlzAnyxQqkotfmE8Z8WU,iv:sbiFqlyb6MKV+J5wkSQP072C7DZNZ61zvDb/7KL8NnY=,tag:kRVsBMkrLrwi5H0VbQPcGg==,type:str]
+#ENC[AES256_GCM,data:or1u0mUHzTjQbx9gPDSePyoWfYGrymRdE/+IYS0R/9WbCsNi0ttviNPLe3mSd+K+gjEn8vfQGH/+S8Hxb01usvmB2ho+pCZiJEWgRjl3h3c=,iv:NDaVJlxAB6FQYAjgERA610EN3KEfm/9H8JtabXMOBW8=,tag:e9pPulxiQeSfxt+rjm1rqg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:mBrYiSt437IP/kGeD725,iv:xFlMQR1lyBi2hXY9VPv4EiYhkwYrcmtKsM+su6ZJhO0=,tag:SlpBKlFQeX7nJ6qu9oNhJA==,type:str]
+#ENC[AES256_GCM,data:LLXnL9xHCcohdWCFCAipwSmS+WcWvljpUEatCNT76UNrZEnluHd7y3mr19SUbrsI0xE6YRXGU71FvdRIbPGewKXu23JKGLzfuT0u9JplG0yzLodtttTA,iv:P82J1BvCk2lWRFCqGQ4O4bQjOtAW7T3BM1RdOp2rFeA=,tag:dE4pc0nsHPcIzUyIMDmNCA==,type:comment]
+#ENC[AES256_GCM,data:1Z+mcAnqMiEumH6Y+Hgaie+FLnxQ4yN0jWObKt3kXuTm4G9QfnDq9ThRy3EykgIjSwVNqk3Zd7J4dk/+tiAMgajboMtlpRHXKY3tFiQYm/mRSsd/z35GcvLR5gqp9n519jobWFkzuXZtp2yhdrR29wrshNGW1gURzsB9gA==,iv:QCI3gg69Zm2GGJ0gCBu+JvNcl4zP67DS/FjufqiQ4CQ=,tag:O62mghFX4g+Y/mouuig9Dg==,type:comment]
+#ENC[AES256_GCM,data:eVF2r8K2LvqoMFJhKrGypNFrQxYPsvurvJ8U2XVCzVUxi+OeT4+MvbSrU0LiwbPPRHSTGBHWfQp5zS0m+GPomAoLtaZvUOpNom/IU6yr4zk=,iv:KwI5nK8/LhpXlHMlVbrwOxTANkhsBlgpqMyutMaWKjA=,tag:t60bV4aHinfvl3qUY9Yutg==,type:comment]
+#ENC[AES256_GCM,data:x2DG/0D5YU9Kh6IolOCe6i8uY639htFsIDKt/QqAqWStIQFgcrnF0lNqJRhtfiKZyT3/Y//W,iv:vl6SMvJuCTH9aibTda0GPf+AkzaAHaKvSF0QLgNTuS8=,tag:yWUw+6Ff/ZSn0Gc573euJw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:B4Z9sLl/i+NbuVsj,iv:kT7ugDCKddxYjS4i/Cbsj6FOqJBltpk2ezCf4xYPRT8=,tag:9rV0Pgirbd5/yt6Uh2T0fw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OC40pcTU12nGVa6ZkeopR2I=,iv:8HY8Q2jipL4EeQMjhpktLyD/oMIVbfc9DkIRJO2EZIQ=,tag:4KMKqSZ0LowDDl3SAqiVxQ==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:V4ki+tRQltuTjCCoUdwnoPKmB/N97wHTMEPf+LCwIKg=,iv:Qf7o42uvfSKvbOUUS00zW6uLYVGJvwhTewHZ3aIrp58=,tag:KnrS5DIE2VuYdHbriiiF3A==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:L3l3hBQlmpuCAsBBr9/z/S3cYVCvCko5xNUzrSDzrQpOx5iL7jldJA==,iv:Kp+kFXqI8eUjpUZvSefiKdv0vdp6Go1eyN5Jhs4BgPQ=,tag:jRLcQhNKw2e1uyMT+byDMA==,type:str]
+#ENC[AES256_GCM,data:H+n47NK3QRI4GbUlk7Ubr9+ssLo3F2+TQmNJEgX+K0y7SpQpfoAWQe1fJr0jrsct6Kxrc7O2tkd9hUveKEhIsQ==,iv:37n4VF9HJLyn//TQMiP8EmqjRNHrIlQTQfPkTrKJAd8=,tag:Bf9KKEs19raB5fgdIjPpTQ==,type:comment]
+#ENC[AES256_GCM,data:WFBpDpdk9298ts38usmmWvH8PnGmJBfVtkq2MN6ppSXl8ZU69Jh6K6i1vBydr2DWkrNEeREFKzQ=,iv:tk7AGdBQkExbFz3FHB/qhc4NHpiRJuYiPb6uk+pcGgk=,tag:9B4ZVADH075+vQymXGs4Ng==,type:comment]
+#ENC[AES256_GCM,data:4x8namrHJIZ4t5tVQ29OKoX+siDtAKr8Zw==,iv:VQHsraKdrv6rumSN0zVCmlgwp2O6Kmkwv4HgCkD9EHg=,tag:VwwteHa1/AGlIeBy8HpMug==,type:comment]
+#ENC[AES256_GCM,data:aAtD4H5gD6gxI/CjizkCw0b0Fecqpw/4/0n9ak7Y0Fkccp9RomTxCo0DYIaWPyXQyZgxJuy7vrlbtGlQp17I6rKKQWauYeGxgTLNpco=,iv:h2G0pwG9OYDD/OtUHOJL8ch1TlWQglq1oxRNIpMcQ4c=,tag:OEnkYbjzrGagb0mvY/27bA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:L/wYOj8HtYTobK8GmBM5klc8w5Fm6smxkO+JG4iRPi83IAKdLD62sn117Amu2d+x,iv:8uFSdkxhscfKi9tADF5xNnBV2UsyMcaBgk8T6wdQ/7s=,tag:kUT+TLPcbI/Aad0NUVzzbw==,type:str]
+#ENC[AES256_GCM,data:xgNtw40vts3jWAn6iwV52/mMJXoLp0Erye8R68G+Yk30wDHtq1YdtKQeAR81EBdGm3+1M2QTtioXFA/XgSdCCoq5kxG6hsw=,iv:dqAeaTE1ubkxEMGVYpQbkNX4DV9yhQCswV2THFc6zlA=,tag:N7dJYvdotUy9eomhmhsqdQ==,type:comment]
+#ENC[AES256_GCM,data:WGux300wwPr9EuSd0JPdTlVFQuszo7Qn+00/StFGZtbpF7CCahKVWzi0SrvgO4mLGmojjKut,iv:DNHq4hKnazAR9v1v0DtdJsUz800Ln3w230MRkM4y2+c=,tag:SDJ/CABwcCN3U9adtJc1bw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:NKy7Bpy7AA==,iv:wZsHGWRxqZJ4Dxi1P2pPFF32Ir4GO80W18eExyhEuLw=,tag:ApBSzw19qBrcrYDP09Cdxg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Xa5NOn4MGWGcbkaPBNkoJG1dDf8=,iv:F1mSdK1aUumY79DkQGP3DSNxiVgTSqT4k6t0UZ5K5Z0=,tag:54Pudja0XKQYmALptEyeVA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:23JmaAC5aUc0QPw=,iv:rMPz5fy29yYtRG9kcSLhjOx3ZQ1Cv04Bl+w+5JsMbKk=,tag:D9W45W/MrUjUJWagW5BR3w==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:HM7mo4dn+Ik/ta5DzDAI,iv:vKx72Rvh43mvlBDyiiLZh4bnaj3mE0vryq+69iyG/ZQ=,tag:Wj6Q9JT+woQRtBNbziD/Tg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:wzn0NenxHyTjseM0NgLQEqHGBMJw6QHLXg==,iv:GZdaB6iauQBZvcNx/9txFVT6zRQLDTBFAcvQCkXWmJs=,tag:PTiypTubrx6fH4wDnTACXg==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:YLYIfLb+dRswJE8rEVXbt/PRTt6o0oEwJWeDaQuaug==,iv:zyaUkmlikey5tv1JErLrqozHBIF89hDy/jYJBReuIng=,tag:rLKxq+jYM2dILQpivHWVeg==,type:str]
+#ENC[AES256_GCM,data:VZj4NahugWWAAEu/Rr748I2oO7nE2yTUK+YFdHOQs5lnEuguLQA=,iv:5muE+itppm0NKKe3v8BYkk0prle8KU76BX6affRgFlM=,tag:hR+Rc54V+8l03avOu//+2Q==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:/fMQBQqbu8oGxAG5wgBPCAh6kV8=,iv:VOQYyI+yQNGwAPxOmqNpzn+8s60Xox3MhvrkQWIPWkI=,tag:FfyOGUFhQ+lJ3CG2OwHxNg==,type:str]
+#ENC[AES256_GCM,data:9cwQ+X6tXRPuQVZ08zc=,iv:vResZJiZ1CqORYkniaIQHaybsNbwjPmcYSr9K/ivdPw=,tag:s4zoFTtcE8Hqn52xmenrLA==,type:comment]
+PODNET: ENC[AES256_GCM,data:G6ejdr77dVLChBF2+g==,iv:b9hYOSFVbaIOj7GwUKSN22ZulFtdxh4bs8EJqtDlflM=,tag:KA8DAw+Db11qVyU5Vi7LNw==,type:str]
+SVCNET: ENC[AES256_GCM,data:HkvqMGyRISp9QTAfLA==,iv:TnQlutKmdfCLTiB5Fsii0ANFKGcMhvl8nfrNDKqhWok=,tag:a84IGi9I7anKkfBjecbIbw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0NHpORlBtTUlBOWR2clgz
-            K2ttT2xJNjJpaVBOWWVXQ2Zlek9jdVZoblFNCmhNMXdIYnF1YTU2cVdOeGg1b0RK
-            c0xNN2RIb2hxQzEwb244SVNmVVR5YlkKLS0tIEpJMzY5NDhnUHQ0ZlNIN1JSdFNF
-            clVBb0d0MlIzbUJPOEFmK1JJMzlvQlkKt5/f+5R0KOFrk+zj9lx4qcO6BpTDJtbE
-            vBPt7P17C2DcLajSC43Rku1VPixzmktX1DPZWrzOk4BsLh3MVF/VNQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhTjR2Q1J6VWhUSUdtV3Rj
+            V3BGdmQ5MWtwckU1ZEVqQ1luQXRITHZIb0Z3CkNLS3BHaWZnSmQxOGlIM3A1NXps
+            N25jNUlETUFUN2ltYWRzUm4yWHh3bWsKLS0tIGJDZWpDRG5xVVRKU0d6RzB0OVdT
+            SHkvclk3eHYrRW82MG1hT0JzdFFGbU0K+pnzI6qyyv2mxURx99w36zdjKy1uIaMj
+            BxDy7a+A4Hm8kBsrb/SJgsnSIIh7ycyVYtVyMMXig9qxeMRPKtsFvw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:35:22Z"
-    mac: ENC[AES256_GCM,data:by/Q07l0dcQuI6CxoaKsBWTOURTsHJovH4XVTFmrf4YJlrJ1fZBCZJBTJWyZ5Zfrchba890RSYYa/vOF27s8XtBVR7fiPxUlu0l3N3pmXlkiQ8sEK0va5qwtkfMWwLSaFIL+Mjzdn5iGX1tMrosEtxDQRqBYs6rnSo/+sQdcXk8=,iv:+Es3EGgrSamnjIKekvilB4jec0i8/xMStp0wizTtxRw=,tag:IHHyOkeVQ21Ciw+Sy7iodw==,type:str]
+    lastmodified: "2025-01-19T19:26:31Z"
+    mac: ENC[AES256_GCM,data:aTDvHBA7s2qFt/cGwEyxGl1Ai9EaT0KqvhrazVhQwdcs+0Qg1ShzJ5AssZLvkA5BFtnoODK1LPcRNSAM0y0UJ8E/IKJVQEHK6ax1q0zQF5vhmhmzApV7ODa2XRCMsRoUv2OQXhg7DanZOtjzqc59T88O36RaH7h8nfN1ViJsUXA=,iv:viMTWF858NFkYWJ/zAxogoMbHAKAWNlTMYcZhsuN2FU=,tag:DQdSVPSG8BorO/dmmjr88w==,type:str]
     pgp: []
     version: 3.9.2
