--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:jmShkpAA7B9P5K/L5c/sbezsP1nXR9ja2uAQfhaYTSedvLCb78PYjZwx5JkZfsBSO7zFJ+3K1568eWUzqPaNXY0=,iv:PbfB5NPfyAWJLwbRPa/svK3YhxAueQ0O1yziGwIPyDQ=,tag:hjzutixDEOcpxnrDs+e9hg==,type:comment]
-    #ENC[AES256_GCM,data:RmQlI/2cxX3qcHLn228QFL+s726ZX16fjHeM36u1Uq1j2yOwhjYZq/C6Fds=,iv:/VHhZxex+YuundvXZ7Blf3PaTPSCkOkikM7xb46bIoE=,tag:wjEBQIxW9/J3/lam+R5QVg==,type:comment]
-    VIP: ENC[AES256_GCM,data:vt6aGrJWjK61f65X6w==,iv:zgEZEgVKhG164GjqEOkdR/Mt4PfbqFVWzoD6Ow+q0q8=,tag:iBumXzMOkV/Os0OYLFvs9w==,type:str]
-    #ENC[AES256_GCM,data:jwggMx41sASaA5tQbxqCXum19abMiRjfLyxN,iv:AMqlzuzOtIT6v99LCw5LbNbSILQXRSPsbXhuKeZo2B0=,tag:Pdsad6qMN95zWRd2918ipA==,type:comment]
-    #ENC[AES256_GCM,data:9hdeJipZaqU0p5juybxEvHSRnOoIhdC1VCDGCTZI/77eecyvcfzIncZbSPN5BFiYGJZrg9tFGEFSh6KljwSyXOr2d8tngQXe9TSpQ7yueaLCOnw4FcDrcMs=,iv:1PhGjaR57EuPWPjCuKiTu08AbxiKbKO0u+ReLZAJNy4=,tag:j1W4YuRR8olCAWw6PNJ8Sg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:6L5Uj/Op1HCRL/+tXT4=,iv:JNDUSsbO4glgIk808GcZB+GlYndDDmRsizrYPN94Lhg=,tag:Q5SGpSbB+mU+VFsfIU2J9g==,type:str]
-    #ENC[AES256_GCM,data:qdaU+azuiXtsvY4X0eiSZBoyvWmRxtBcgzx4S9BKBcUahA==,iv:i5ChWIB3b7YCL78gxgpjek/hlqXhT4QTvyOtoGHnfNA=,tag:x9cKK8Dopb/7sLUNU1T1Mw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:q8JS9853ehn4E3sCRg==,iv:Ygi8SwsnndQtQRsxaUp5iwVXq6uAkewcGCgq+5fFI2Y=,tag:zNN8ANdisTQnEYoHju3c/g==,type:str]
-    #ENC[AES256_GCM,data:AbQ34yqsInrdWeE9mJrwdhtVLFW84BAqIAkCCXX2CpXqphypYc90i6W7vBuCOKw=,iv:+qFJfZaW6znYqHGwFbUK2lV8QSC5XYtQJZpSpP78MoQ=,tag:l/YjxOGyQ/GepRSu9JvpJQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:cc2R683xOgSMaRgpZwcUBdb4walIGGSlNiqz5Tb9UA==,iv:8OtNbLUnef5X4hE46XNZ+vRXxwOgJnwD6oRp68JzfLQ=,tag:7ns6KoCcVXxE8LqJ3TxtuQ==,type:str]
-    #ENC[AES256_GCM,data:6LUG5xyTbS+tVRCcMaZmWUF4PVnXIqP5/+3gVcSgIXyFMq5QVsDfNrnwjkFol+1qTXMOKvh4GHc64E0znwBieHacjXgGFfxJaUD2gBKDFackug==,iv:TZHE9SYmG+EM0J40OvB6IrJctBVamEUnO5FdjVfJGOY=,tag:SfVhlk0lDWmmBESKtjKSqw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:kfODUZo89gqqNz3dJ62Q,iv:192Z2CepsdG1DbdTinInMwzQc5E5KzmUGMEe1uUHpuY=,tag:db1MPAca3hEMY4A6ZTugbw==,type:str]
-    #ENC[AES256_GCM,data:peKHfT3eqOAA5MueuxcuT9emLF1zxlF8ziq3VfbXfX7O,iv:Vm715o9zDaws1M6eFeuLut1hdJIXtC1rbcceu5NFBiQ=,tag:OSejX/vlIdCLrNKwjqB1ww==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:KTvJ3gKhk73TFlheMQ7w,iv:pMOjKDZWobE2CPf0C2r/xKs/Vq77lQAS5sSPYcANq0Y=,tag:F+R7Qgol0NWkC5ZG581jQA==,type:str]
-    #ENC[AES256_GCM,data:k2gOQ60tzbyAIlY3THQJcstwSAt3UqWh71RpKPf+yBBDXaONs3b4yA4FkG+2DAE5ZcaWmCjcynUBP2bnxpNQ1lbXfAjNpUA4frwiPXuRKcY=,iv:w4guGvFbc5yqLIa1YKqFsbRphesLqDtLNsIKK7mwNrE=,tag:rB3WJ/zykhBkDf/y1u5iRA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:Z+DFeu3tLY4GeEMRnaU4,iv:73IwttGHhNWvTz75TlLGNyijvZCVfyABZ47JhuVLp/k=,tag:x4wdMPd8cWVedxwbWzuOEw==,type:str]
-    #ENC[AES256_GCM,data:OUjoHtSODFzTp6Cv6T+tc4b5M3k34u3aVjDxgEs7LwNDEHqHtyxwXVYtoZ5T3kbw2eOWZ6PKKvUf/2RioimvavmwCopzIEj7n/CFWkZPLrD5wgmQdlq0,iv:9+FcTzIRUIlGsgoaqdmHvk6HTML7E0J7Orkw89NqpiI=,tag:71uyr/j59FXxE9/HDdMv6A==,type:comment]
-    #ENC[AES256_GCM,data:b+Y9HuLPXjxwyLjo3hPMUTctc27RUYClR3+abpAN4d+GGlnwv5fr6+v9kOU+emLqv/6mVIoPLJPz3WeGNrzEPRQhE5uXvz4JhryjiN8cr93a/SVsM8HP9Ue3XrMsciM1h9In3LpNkviepIzKNRbRVk6mn/LbM1w9fMDSiQ==,iv:0skoYQzkSDUwX94hfx960EBLdpzEfwTv5QQvGLmwjl8=,tag:cCpezXWCNIXIc64AQfrV0Q==,type:comment]
-    #ENC[AES256_GCM,data:gmYt76DKtqG+q+NxIx33Jb+lPUw7QXaupp6B5aXeNgQYYVjLKS9NL3qXe5DzyMzbmXWdz4mjidJ/E2oUqw10rDtL2xOVCjBia8kTu5Grsm0=,iv:5cEmUKPgGZpQgMrO7Mvgzony7srNsDZMa7hxQNPHxLE=,tag:9oVCWcE/W1+JzmBDY5sj3w==,type:comment]
-    #ENC[AES256_GCM,data:iPOeArK72cwVn2PIWHL28f4lgn1Ox4WeyP+mqgudwGwoWHb1sw93Bvajw1lt5TSV5+3hLThP,iv:lp2Mt055eUSqhSvOa2mTPYfZpOdcPq8WU016euY2PmA=,tag:gPoy668v613nPrltZS7CMQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:i97i05NPcRsnDSns,iv:YWkm3h7Jk7WtnvzAoduODwValskZvMXfZjeoJAwin60=,tag:HFLaqVvHcb4qiETeWLY2mg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:P7E4gOiGq2Yyipu92LujAUg=,iv:wzMStytn6T0HWCq1loJH0ahZojFuyuemJjVek4XRJd8=,tag:0GTejNA7+AxZ5rVwfvi/tQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:r1me5n7Nl4VRiMIc62o6qSesW0IfmfdMDmcgip9NMv0=,iv:JngIiDIK7ezuEjdyEGpJHtA2xCMTe92wjHj7mMXZdJQ=,tag:76P/k369dp0gVsfIlOj25g==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:qMxm17DnALz06i+YmVsBixwFBsZjH+KQpTBB3hnd28v6Sq69ebFzVw==,iv:6uRWe4/+sfbPLExG9iqBratznPSlxLmg3rahqkucFfM=,tag:4SLH19yFiYpSrxE3XXrU1A==,type:str]
-    #ENC[AES256_GCM,data:sxUctA1TbzxpKaARqs8OzZ0oFtJdQheMNYh43901APHIUeBrMn38kEFchNcosDBCWPN06M7p4bAM7hK87+0trg==,iv:NrsgU3HQKmOz2zVhFNqpxDP5zqshmU6AwBfwi9TWrwE=,tag:gunrFJnNESXRhlF19mG0/g==,type:comment]
-    #ENC[AES256_GCM,data:7tMwF4X8DPJkGLWMU/j4Q22LzFJPG9WMNE1I3SlKe7CR/XYxRCkUcGmq+nK0gKf8DeC8PMsuQv8=,iv:gWg/Kc1MHXF/4f9tB5ZIWph3rq+5HOuhNcqpUIwckos=,tag:mXR3RpOViF8zgAOB8JvjrQ==,type:comment]
-    #ENC[AES256_GCM,data:pHXMwmSwfxzM7opUXZRPhuOcgV0PsPg1wQ==,iv:oslR1sEcjU5ZXBuF4J4c2UHiByOy8Fen8X+nksRwNiM=,tag:93FA6l2Vx/U6oTx9I0ha3Q==,type:comment]
-    #ENC[AES256_GCM,data:0cgdp3UKkqFh2q7mFqq94/lW1OpmJkfVNxOUbFZRqz2EtimenPvUXonsdD9MfjPB4oeHxoL4w/d4uc4g+lRlNgVueh2nV/OrN9udrSk=,iv:RagBglLZDUS0bP6FaVP260UUovMNLeC6UshhxuPqQic=,tag:QGKv6lH6N5m4d5KZjvMKMg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Ib8wvoWwjrNuASdLjrNZ7liZzrW0ETfX7EnI9NgAXGfHABj+Qm3Dv5Pdo7vGnxIl,iv:NjU9mjqh+LG2BxIc/9YbgtLYueJKrhBXCOzr3HBFAoM=,tag:ML8sEEfbnIubk0N8Ng8xaw==,type:str]
-    #ENC[AES256_GCM,data:gwRXPZiekZyMIp0MuyKwNXblpETHJuykXBO7krOuzOFvx6KinQzMi1IgJQtftCRnT/aIuiS8pCO4V+Ne9KOHQzxJLBTVdq8=,iv:eO0seyK4S4i/5T9RjqE4U6bFuqqaTCTuh3+DRBSxILE=,tag:ruqv9jRbXlHMI1DC+n4viw==,type:comment]
-    #ENC[AES256_GCM,data:Oz2y+nuPmqVe9fnD4CUGPFP1WKIulyEs49t8xhd+ur9pLbqYaGAXBLLmpYsrKQWzST07+3g9,iv:6yiSx4j2vkNYlYqbOWHmEBxZfVWbfezPG8K6uY8PosI=,tag:b66KGwUI7pT6jH84PUHPnw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:NEJZtGMoqA==,iv:sLh5oBsDIuy3S8nCJ0MQgtZNArP3VlFOFMDITR5HHTg=,tag:GKdTchIYflST59s7wKJKaA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:UKKr617nxqhpST/nl/fG/HYaHnc=,iv:4K+6wwx3OeGRRjwxW6KSF/e/M5kZAoguSPIpI8rMHeI=,tag:TNOMQXNplckni6aM6GInRw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:zc+Vpsopltq9nls=,iv:mqxs6etEy8lOUmCR+9GclqJLF4eSEQJyDUBm9iGBQR0=,tag:WFLvAXZbluq/m+/1WlsZtg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:NugaWxnh98NaPMhSvcHJ,iv:6bJ7x6iy9V91gBMuuz7vagbXW6pMyXliUw9C3E3BIsY=,tag:LLd3kaNVO7rxDHJJQ7l5AA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:uZVPwIJq1dbfDbOPsipI6PxrbJ/TqlzDbw==,iv:6xeU/ylS4CGVjoZHIKT/I3pczbrJcjLT+zDnROAzKcg=,tag:Iv/1nXYSr0JlIBxusKlWdA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:3BPn5gd9Kz+rC0ACKx5YMIHe15rPrzz/kpJFmICK2g==,iv:DhkkuUfI3f0ltfAGJGC/H712baSGQ2jpT/ZSHI44a74=,tag:46Jry0ROR/f9cmXCoUWzIQ==,type:str]
-    #ENC[AES256_GCM,data:DD3y5xVzkpbbCxHiVOJNwNlCsV0JiRC+TxrB2OEhUwDRzrAEAKg=,iv:0w4UNsbq5MVs58X8lqaPmyJOpnHn6vgjwRvwjrD78Q4=,tag:Ygb+xIs01PcaXZ8qBx2E9g==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:I1nMyBvn8U6nKoOg3P8B5Tv9a+c=,iv:TtZoMCzhzrbW6q0EnGP5bOsGHfdvUL/6kzj3VSrZfvs=,tag:lv7tdczvXnsPYTV+ycI9ow==,type:str]
-    #ENC[AES256_GCM,data:jgO6Ay62x9O2cKGfqHc=,iv:hNw+l4eTdU6/CPRwxr9Uagx5iq4l7gSuKbraTlr8pGM=,tag:DbiWKf2TDmeWsRUXSz8kVA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:wfHci5wDrVLRMobRLQ==,iv:XZOwVXLlYQQEz9TlAI4cy0KR72kwcAY8hrTZLKYn7VM=,tag:oEVOLGBhHjdLUz5W9GSfyQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:LKcnsCwMNN6LR4hYYw==,iv:WkJvHhRyjU/hDx9TGWfQ9m2jwN4Ul7Z7I+Ijja1gkE0=,tag:5+sCVS2Zsf4nqWYSFgcF7Q==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:p6Ci5g==,iv:vIJI+wciGJdg5wggtmd5mWpgs8MHzCTSLtfMXzIb2wM=,tag:H8tAf65gX9sZdJBHTgQPXA==,type:str]
+    #ENC[AES256_GCM,data:DiynjW/BfrlBmzlBV8Zi1bjWmbLIEtUEWZq9R/VkcjoCi/izUtN75r+OFFc5o1XyI00M0QKmsUVgtTvz9fDnQcg=,iv:JCftS4pAemOZ+U4P5YQZ7aRHlrnyh1ces9yDyH57u+E=,tag:VkeE/BuUskdrWwG9yjjhjw==,type:comment]
+    #ENC[AES256_GCM,data:4lJU9frlTP14yPDB5oMu/7VioRXg3uxaW/GxOi2b0F7KtVZYwEj7Qg+Fb/s=,iv:JxzaHlIW3iaqKkXU/DPRZ9KAfEFl/mFMwrt5cVddnyU=,tag:yRThYcFnXTSlaer78Odfgg==,type:comment]
+    VIP: ENC[AES256_GCM,data:Kwfma83Vp3T/SmMJRw==,iv:ZrDTf+nzkB6kvbCaDQEF9IgBepGVJP03eIeY0rbPZqQ=,tag:lXmhtSj89nC2IgrIw8WEhQ==,type:str]
+    #ENC[AES256_GCM,data:ceu++tMEuLs/jo0Jo4taqcPlz+/jKD01U7UO,iv:SDAW5lPyxp13HsHP5F4pvLBwflGwZz9EtIo0ZD1FH1I=,tag:L3Hx7/2tZyzOyBal1oaFUg==,type:comment]
+    #ENC[AES256_GCM,data:H+oyYA1v2nVQytErk8/de1ajkxqm70tTSY/HVvRCCCmNF1sR/osXhCW3wPAqNbaWkIKxj9/av6bKbSg2RBtzBaAISypFi06fv0gzxQkgro5GcHDOxO8bmFA=,iv:MkeoaaKhEQH5lCB+P5SAg7eq5GQ5B6fiPCHqIqfst30=,tag:+coI2UNLGToB3fiUeIclAA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Q2EvFJiZj9Ltz637PYQ=,iv:1k9bsPG95jZ5OHPQM68Qsv1FRzU6EEch+KvU14eladk=,tag:t7kjS6V1T3GyZq6GEbfGww==,type:str]
+    #ENC[AES256_GCM,data:KWfFs/bVhno9nzoYbWMzZWx3O+LNEuyg7TmO5Eum1Brhog==,iv:mgNvYcqJapRnxHRH3ZcuDWgLZ6PamxkJLKl2A6eUuF4=,tag:hPFhh1++k7T6LzBtYpj7vg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:N0Q+61Fg81N5K+RzmQ==,iv:ziFN4ZugDj9bn2kKLYXMqnDkesLkAZvCIix/qsxqDVg=,tag:GwTtV2BgALbTuk+w6+FUDQ==,type:str]
+    #ENC[AES256_GCM,data:wLjxkbJcMKzlJbsaoLNNiOJBdPgzJrlzeIzcFE6p8rLO9bwgzNHDG7T4CO2+StY=,iv:3MvE829zVMKUZMqoryp73UN4UjuE2gI65+iaZUPS1Kk=,tag:7PR9+Iz7EvuRLRTlUjzg9g==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:C19jJnZr0g+KOxk9thgSU2jw1VP8jq0b+TLqq8873w==,iv:/oVgRUu/HK71Ij6xmoBePbQRBoLCb+GdiU2zBvgzrOo=,tag:QZ4JCeC4K/XPjCehazNxNQ==,type:str]
+    #ENC[AES256_GCM,data:Uq46J3MOpPoshTwDkywghAWNNJih9axnWVuew/Ou2izAQFkxlMKeLgXRYOn4ir3lPmBEtXwkaWCY2goEyCu11W67lkdIIb8CHV/bkIVFgers8Q==,iv:rMo8AsHT1aUJ5rDEe8wIFUi5jBS3MzbZupteSdGWGdg=,tag:pljQJuhm+rgdEMzOcsVs5w==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:cnzvbGNHVxWiJR2gbDDf,iv:fwM6DMuN3AQW9oGgA6MS0P0jozNERZV5Aj2D1gtDkvQ=,tag:gxh7UZVd9xYTPBys1OGaxw==,type:str]
+    #ENC[AES256_GCM,data:1OMv4h8uffQ8B/16viJs6M4qE8mJKYm3/6y0nKF0bMB/,iv:sO/PHnFzN1zZiaa9RDGJS0Wndk/JJ84lMBu1XS4QI0o=,tag:5HXJ/jmDn0JLU0AmDVKUqw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:3/nG/tnLICJKq6L252Qx,iv:rUr54+n+KFad9N+zqUaeN4S9DDlxzGDOuPgPyOlUnD4=,tag:xkXJpKUmY65zbIKoNew5Vg==,type:str]
+    #ENC[AES256_GCM,data:xt1+pVEP2Kokje9DGjjm40YEJKiB2zRuGAwj19GnPjfIn9DcMMSx9iDdn7lhWJUrd1kKtS1CkN8UGVDeapMDE39KXtLmQ606nKijjxEJrDE=,iv:bXYGNaj6m+9RqS2XqNO0N6Or4nbZrICMTLLjx+Xyx0M=,tag:v4EECph405A+9T/bn1Tepw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:IyScSOQagrZsh0bOr3Co,iv:0E+Jg7AjNjJHOngJZJN68ZBGRNDw5AeCnBJQwC4G/LY=,tag:Wk7vw5j9DlvOuUoil8AVYw==,type:str]
+    #ENC[AES256_GCM,data:D7ia7rrdNKrOdz0yED0MuR6HvH4b2fqK1vuBKF/Ou+a4NzNsq7NUqpPJ4NoyNZjbhxro5TJ5D0RkZgBIfjMCNs2TVy/LITN9ftrGRTNMj2AiVXOe/yeK,iv:CAcWxoI5AWtJBWbrmeZ5gVwlnnvL6LmI8J68uJ3B79Y=,tag:aa2wDmmJbTxc5wUL+zZtOw==,type:comment]
+    #ENC[AES256_GCM,data:Jjcdvfrv24hBB/tUi5JqwWcT+h3f6f1OfOTzgGwCFPD57qT7KnKj0Jgy1zl/pLr2qtGOSPhYji2w9XPXevyHcU47XPFb9g7ODHGLRCWlER4ikkpvsfqXSpiPSA2rHVGoM3rqdMCAZRQ+F7dMyLqnUgsQp6Kp7W81c2BBpA==,iv:JRZ9uqKHyXw6vV0DF29qxFUJ81sqzykDZCCsH0Vhg48=,tag:4Murr02Ex2UtdvVb85oi7Q==,type:comment]
+    #ENC[AES256_GCM,data:hSVL2QfCWkNl8ZCzrTzqpZXLfPoeUvman3ddI8skdZ/37Fad29omlUTiKKE9Z7YCkQjgPOgEduECoApCYoaPRCfgvwxzjPht930xJHVwwq0=,iv:OjMdS/M7dEqOHChZvUnKlvrZkrgXqH2EwU+VzbeQvjc=,tag:xkYjB8eLkoHigJM4RM6vbA==,type:comment]
+    #ENC[AES256_GCM,data:z4EIYXbK3euSa94agwqEz6rVO61YdtdZd4PY7pd6Tux3vwDvxkWpCEB4roRwW5VuCZj0IrJD,iv:ehM608S35oqEIxJqMvY7glXS2qtps1uechRLJAJbx6M=,tag:/eYIlYn+2oxQEm874Z6lxA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:zG8RfS9Tl4n4c1Yy,iv:pnTHgy0JI3bOyrlOZm5ArMj5WbqOBcgwln8sadr9dPU=,tag:GbJOIRBSGbKPptJW6i3bBA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OnddH0fVf+Y+QrDGNZz4F8A=,iv:kUwIXC22DmvdXV1Ht0IQJcgfcwCPKT5IQhcZimCfuHs=,tag:w3GvUjiBh+CojV5SJUfddg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:dnhXdzDe+XN6VK03nshiUmgJ7rVA8/xqiUAAicsOw+c=,iv:ITYSpqzeTXYpxRnMK2HLaw4EeXc5U4wf1iBkKDYPDZk=,tag:8wjkYztlaJ2MPTt91/KFtg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:hLKlemHbwHmCsB/VTZCuGjGpDMTHzU52IZzIJpOF8ifzUJiZXLUYvQ==,iv:yo8M74vPT5NhgvmlN34Auofi5n1S0/QJwrABImsOVNQ=,tag:i/Lt/upBUC0VmMlplxaZbw==,type:str]
+    #ENC[AES256_GCM,data:3mTYo9NvwVV0uEIgqcVaU9V4jJtt2IKfmEa4ZaJoH7z4N2C2ovH5oorLRTYeMak7gSdM3umETCbWofV7NLWjTw==,iv:aFIUY00nl13xykPZx09mdxTgIPjOY3S0+kr+vAK71vg=,tag:1sQgyIeLdzpaH7RAA5jBuw==,type:comment]
+    #ENC[AES256_GCM,data:HI9aPpHY/jLbQqfO+fpCKSI7oWWZLvoK9gNSCylpVOebUV/31/qQMtOrlByV1RDxSl3hF1/QQps=,iv:ZtxqF4KMiCgAB12vx2gyrBiy7fCak5Or2G61TyoBMgg=,tag:PvKhSCEAM9FDTpSQWRnh2g==,type:comment]
+    #ENC[AES256_GCM,data:6NhZjF/9ndssdbHkWh7n8k8XOX4w92gK2g==,iv:mKMzadkz6PkPpFguNv7jWCOL/yCQSgcvhThhtU+FGZo=,tag:rZhxloLx+OA5Kw8TQGTSiQ==,type:comment]
+    #ENC[AES256_GCM,data:AW+X01llrRSyWnrMPiVMi3D6qLnrPuV4FpwUW75onYcj1tiK+D+8/7k9rAHY9VqbgTYwUnvM39UGDXRGf16txIsRB6drxRl7k/Ir1Pg=,iv:kvUM+wlB9/+A8xgqTYvH8P0LyvKQ3eVPK+/PCzlmZnc=,tag:nrF4lWxeWRdmul3V8ox24A==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:7l2rLwrfsOokBI6onHRsQL93MopUJeYxiDeW234Tb2/z7Ih0Ak/Rs/DCzs2gHDu3,iv:G5PaCuIB0WMHINZPQDEKuPICUi2/rHNju0wEiZql65U=,tag:6w/37Jq2fj6UBr9be13Sdw==,type:str]
+    #ENC[AES256_GCM,data:QDJBEjWVU3HfIyjhEfj9win6ZVL01kD9B0tGUeNkB9DBv48UAAW+k12VH8NuvqZW7Xm8+luMJEVTFkB2eZ/LbWr4qatqxIc=,iv:yTm0kFNbnEL8TFEpSBMkA/wANpJWQZAlwbKxp1eI0UQ=,tag:E4Sm5vMA4G67Sz/IZ8C/qg==,type:comment]
+    #ENC[AES256_GCM,data:K8+FxuMEroSQhO19yDkLata8yrlwrmX4rNlhTEESANOJNmqHRqQqzCUy4W4sqM0W3GhaUzbb,iv:KMpLGGhe/UDBNUNQ+Ruu5wIDLGfZi0oNweTSfPWV2ds=,tag:PMAtz2VYWzp/8/QGXeww8Q==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:74dI0OTcgw==,iv:15/gt8v+fGNNEzCO6r+dbguJGL09hRxa+Vb+dYX9FRk=,tag:FLDuKwsOPxwd3twLGVoVWw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1XTWNb83GvPTLxkYY4GXV/XJIww=,iv:VSNqUBa7I8oD4lsv6fvlxxb8VrB5MqTWH8vFm95qypI=,tag:1rNYP/LJwl29M2dtvpWRug==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:sa5yq2NXanbeN88=,iv:NviARjKxGq1tGVX8O++AfPpr6l7NLiSqoa41vo8TAg0=,tag:NjfSVZvOLksh4gPXG44iAg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:ib+GWysAUF8+xR0kvSOV,iv:npD6iVkOvul+lkg8PXs6lhDncEXFKmnAddFuiuTI/34=,tag:PrL7M/0hYEpeWAGgMGKTlA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:FSfHRUnQCeHtie1EZYJfxvCTUYuuIoZk4w==,iv:TsJDSJYlGTkdehyfheFCBq6Qsi6CTSZ5Y5KOD2Pls8k=,tag:dvd85/EiWAxJyQegjNaidw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:QSLIeY8lnB9ZxhTfE6e0szzXkCkEEP+aeynr4BxDNg==,iv:XI+aUde5Y4jJ5pd8tSdnI45l8cOhwUhC0oKKWxxVXIM=,tag:sd4GSnRD+ZCcvcIxsKK38A==,type:str]
+    #ENC[AES256_GCM,data:sEsiyrOy+HYt1SR/EXqXifzvFYID5pm8DHXDyUqnzIEC8uAk4dU=,iv:32qyhUISSpjs5Qt4LgON0NUOS9zmI+4k47qgO1BITUA=,tag:QHeUoAe8z4nKYSWHQgCSqw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:G/Yqeee2xe/nnuYs///nGssBRcc=,iv:Nu0bbrkdj1miH7GUVp/K/+PZGzzilp4aGbT8ul/sipk=,tag:v90BSyV5g+kTk5Df8gjodA==,type:str]
+    #ENC[AES256_GCM,data:oGZIxQBX8D2GN1mAbCU=,iv:Lh0HGZCSuiNdmS1Z0IGJdqIDs+jX4PPC7JD645B4Qa8=,tag:KgMjfMPYHYTCY+Fy7wgMkA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:s7lBioP/gJ3ZlW/NkA==,iv:mlXD2IIo3buiPFbwucfnYE4Rb2+dSAdMyURKLJhP00s=,tag:QoAVssn4v32S28H6uF5M9w==,type:str]
+    SVCNET: ENC[AES256_GCM,data:/OdtMSp4JRtXTvw3Ig==,iv:rLxJ9o3W8GVkQViYXJi6cVeY+bIz8RevImFOClYEmWU=,tag:wcWh/6mfHrtpIcMXZiZW+g==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:86oQbQ==,iv:u58XrnzNuc6vU2A/XwZY2DGuuqSrvsXIx0KWnIqeGGA=,tag:WvENGaFYH5OtFMSpteljYQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQVnluOFdPdm8wUW9scndV
-            NTNDemdGcUt3bTdGYWNXa1lES1dCQ0NjTWtnCm4vS2lSM2I3ekJ1VDFoUnk0SXEw
-            SnRRWHAxbitTa1o3MUpGVmVoNGh6NUUKLS0tIER2NVlNMnJlWW1pTVdraDVGSGRY
-            WW9JV0l2bUtDWVMwUXZFZXVrb3duMzgKBG7REsdpzRk52dx/dRWeliizTle6rKPz
-            bmQHl8R1LJ4p2dRam7EhqITfHXEJd0+piKOAapmIX7JJzOHoLGy9/A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzMFhuSkJQR0JFTGJGSDFm
+            Wm9IQnloN3B5T2FFVXJYejBjczc1UFl0eWhvCnZEeWZmdTVtSVl3UmxHclNWa3Ur
+            YVNQeS9PRmpZSzNRMUFIK2FzVlJQWU0KLS0tIHRGTGdzRDR3NjdjeGZJUkJPR3Rp
+            dlBlL1ZuajlQVjBvSGs5eEQ3cHFCNm8KY9C8w/syKjaqJO31F57qPqxVE7LIcbxH
+            aQguDNjakK5QTEShwctLzI8CD00ihloG1TF+gW9oZPIZTMikluRUTg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:35:22Z"
-    mac: ENC[AES256_GCM,data:tz2kedwSWbX2QkuHuC2KuPkpCueDgj2p2DhSOf9DNJ+ikFyV0Y+C0pZap898WyG7gPMWH8I3yfGDIwByLM6dWDUaHvAPw0KcIPDi6uLw6LBRdOWBzlp8+RDcJ+6qbRXX3Phr7097P8TodAxhqVKZ2nSBlwMCGVOyyoIO1ZsxvdU=,iv:vfbxiDoe2C0Z2RanEfwfbJ/uv76LrT4TP2dBZgV4s1g=,tag:hiP08m8TnqriWJUl5GjY2w==,type:str]
+    lastmodified: "2025-01-19T19:26:30Z"
+    mac: ENC[AES256_GCM,data:sbUIggCH829eyc7TG8e+ihIkqs1J2l5Q+uqqiQt5ZGOdaYOaqwdcn+8IneRBwqVWwHt1ZHcZ2LD7sKHK43dW75WCOJZ+ubH7Ki3LxlS4xy9+gr48EJJ3YNjO4yDIx5nPUgneNiV7y4UuIOAX9LvMnow9e9J3fmElb+ZzVJ9levI=,iv:gWwpbl8FQVBvWeBS8IENsGR2UoOmDvqqnvgyva4/7zI=,tag:KxszdeyoWo7Pd0RnIFvnEQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
